2005-09-26  Johan Bergman  <emwjohb@users.sourceforge.net>

	* Fixed bug [1302350]. Corrected behavior of operator<< in
	itpp/itconfig.h when the imaginary part equals "minus zero".

2005-09-21  Adam Piatyszek  <ediap@users.sourceforge.net>

	* test/Makefile.am: fixed testing routine execution parameters -
	there is no `-q' option of diff on Solaris 5.9

2005-09-16  Adam Piatyszek  <ediap@users.sourceforge.net>

	* tests/turbo_test.cpp: added `using namespace std' statement
	* itpp/comm/turbo.*, itpp/comm/rec_syst_conv_code.*: fixed minor
	bug (string -> std::string)

	* itpp/*/*.{h,cpp}: file descriptions and copyright notes
	updated

2005-09-15  Adam Piatyszek  <ediap@users.sourceforge.net>

	* TODO: updated to reflect recent changes
	* configure.ac, Makefile.common: now $FLIBS are not added to
	default $LIBS, but set as $AM_LDFLAGS

	* Added autoheader file `itpp/config.h' that collects all DEFS
	used in the project
	* COPYING: updated with pure GPL2 license text
	* itpp/base/*.{h,cpp}: file descriptions and copyright notes
	updated
	* configure.ac: `--enable-pedantic' switch removed

2005-09-15  Tony Ottosson  <tonyottosson@users.sourceforge.net>

	* itpp/base/itfile.{h,cpp}: Changed exceptions into it_error.
	it_ifile::seek(string) now returns bool indicating if the variable
	is found.

2005-09-14  Tony Ottosson  <tonyottosson@users.sourceforge.net>

	* itpp/comm/ofdm.cpp: fixed bug on line 45, sqrt() should be
	std::sqrt()
	* Added the functions within_tolerance(x, xref, tol) in stat.h

2005-09-01  Adam Piatyszek  <ediap@users.sourceforge.net>

	* Removed unnecessary `tests/plot_pdf_test.{cpp,ref}' files after
	libharu removal

2005-08-31  Adam Piatyszek  <ediap@users.sourceforge.net>

	* Support for libharu removed definitely. Documentation updated to
	remove references to libharu.
	* autogen.sh: script modifications based on autogen.sh from Gaim
	project
	* TODO list updated

2005-08-30  Adam Piatyszek  <ediap@users.sourceforge.net>
