@@ -1,3 +1,8 @@
+2005-10-12  Adam Piatyszek  <ediap@users.sourceforge.net>
+
+	* itpp/base/stat.h: added `within_tolerance' function for double
+	and complex<double> arguments and fixed minor documentation errors
+
 2005-09-26  Johan Bergman  <emwjohb@users.sourceforge.net>
 
 	* Fixed bug [1302350]. Corrected behavior of operator<< in
